--- a/site/layouts/partials/analytics.html
+++ b/site/layouts/partials/analytics.html
@@ -1,9 +1,2 @@
 <script defer src="https://cdn.usefathom.com/script.js" data-site="ITUSEYJG"></script>
-
-<script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'UA-146052-10', 'getbootstrap.com');
-  ga('set', 'anonymizeIp', true);
-  ga('send', 'pageview');
-</script>
-<script async src="https://www.google-analytics.com/analytics.js"></script>
+<script src="https://kit.fontawesome.com/8c1112f2d0.js" crossorigin="anonymous"></script>
