--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -46,6 +46,9 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+$tov-blue: #1e2935 !default;
+$tov-light-blue: #374151 !default;
+$tov-white: #ffffff !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -63,7 +66,10 @@ $colors: (
   "black":      $black,
   "white":      $white,
   "gray":       $gray-600,
-  "gray-dark":  $gray-800
+  "gray-dark":  $gray-800,
+  "tov-blue":   $tov-blue,
+  "tov-light-blue": $tov-light-blue,
+  "tov-white": $tov-white
 ) !default;
 // scss-docs-end colors-map
 
@@ -175,6 +181,28 @@ $cyan-600: shade-color($cyan, 20%) !default;
 $cyan-700: shade-color($cyan, 40%) !default;
 $cyan-800: shade-color($cyan, 60%) !default;
 $cyan-900: shade-color($cyan, 80%) !default;
+
+
+$tov-blue-100: tint-color($tov-blue, 80%) !default;
+$tov-blue-200: tint-color($tov-blue, 60%) !default;
+$tov-blue-300: tint-color($tov-blue, 40%) !default;
+$tov-blue-400: tint-color($tov-blue, 20%) !default;
+$tov-blue-500: $tov-blue !default;
+$tov-blue-600: shade-color($tov-blue, 20%) !default;
+$tov-blue-700: shade-color($tov-blue, 40%) !default;
+$tov-blue-800: shade-color($tov-blue, 60%) !default;
+$tov-blue-900: shade-color($tov-blue, 80%) !default;
+
+$tov-light-blue-100: tint-color($tov-light-blue, 80%) !default;
+$tov-light-blue-200: tint-color($tov-light-blue, 60%) !default;
+$tov-light-blue-300: tint-color($tov-light-blue, 40%) !default;
+$tov-light-blue-400: tint-color($tov-light-blue, 20%) !default;
+$tov-light-blue-500: $tov-light-blue !default;
+$tov-light-blue-600: shade-color($tov-light-blue, 20%) !default;
+$tov-light-blue-700: shade-color($tov-light-blue, 40%) !default;
+$tov-light-blue-800: shade-color($tov-light-blue, 60%) !default;
+$tov-light-blue-900: shade-color($tov-light-blue, 80%) !default;
+
 
 $blues: (
   "blue-100": $blue-100,
@@ -295,6 +323,31 @@ $cyans: (
   "cyan-800": $cyan-800,
   "cyan-900": $cyan-900
 ) !default;
+
+
+$tov-blues: (
+  "tov-blue-100": $tov-blue-100,
+  "tov-blue-200": $tov-blue-200,
+  "tov-blue-300": $tov-blue-300,
+  "tov-blue-400": $tov-blue-400,
+  "tov-blue-500": $tov-blue-500,
+  "tov-blue-600": $tov-blue-600,
+  "tov-blue-700": $tov-blue-700,
+  "tov-blue-800": $tov-blue-800,
+  "tov-blue-900": $tov-blue-900
+) !default;
+
+$tov-light-blues: (
+  "tov-light-blue-100": $tov-light-blue-100,
+  "tov-light-blue-200": $tov-light-blue-200,
+  "tov-light-blue-300": $tov-light-blue-300,
+  "tov-light-blue-400": $tov-light-blue-400,
+  "tov-light-blue-500": $tov-light-blue-500,
+  "tov-light-blue-600": $tov-light-blue-600,
+  "tov-light-blue-700": $tov-light-blue-700,
+  "tov-light-blue-800": $tov-light-blue-800,
+  "tov-light-blue-900": $tov-light-blue-900
+) !default;
 // fusv-enable
 
 // scss-docs-start theme-color-variables
@@ -306,6 +359,9 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
+$tov-dark:    $tov-blue !default;
+$tov-light:   $tov-light-blue !default;
+$tov-white:       $tov-white !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -317,7 +373,10 @@ $theme-colors: (
   "warning":    $warning,
   "danger":     $danger,
   "light":      $light,
-  "dark":       $dark
+  "dark":       $dark,
+  "brand":      $tov-dark,
+  "brand-light": $tov-light,
+  "brand-white": $tov-white
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -336,7 +395,7 @@ $escaped-characters: (
 
 $enable-caret:                true !default;
 $enable-rounded:              true !default;
-$enable-shadows:              true !default;
+$enable-shadows:              false !default;
 $enable-gradients:            false !default;
 $enable-transitions:          true !default;
 $enable-reduced-motion:       true !default;
