--- a/site/assets/scss/_layout.scss
+++ b/site/assets/scss/_layout.scss
@@ -39,7 +39,7 @@
       "intro   toc"
       "content toc";
     grid-template-rows: auto 1fr;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: auto 1fr;
   }
 }
 
