--- a/site/assets/scss/docs.scss
+++ b/site/assets/scss/docs.scss
@@ -28,6 +28,8 @@
 @import "../../../scss/variables";
 @import "../../../scss/mixins";
 
+
+
 // fusv-disable
 $enable-grid-classes: false; // stylelint-disable-line scss/dollar-variable-default
 $enable-cssgrid: true; // stylelint-disable-line scss/dollar-variable-default
@@ -47,14 +49,20 @@ $enable-cssgrid: true; // stylelint-disable-line scss/dollar-variable-default
 @import "toc";
 @import "footer";
 @import "component-examples";
-@import "buttons";
+// @import "buttons";
 @import "callouts";
 @import "brand";
 @import "colors";
 @import "clipboard-js";
 @import "placeholder-img";
+
+
+@import "theme/functions";
+@import "theme/utilities";
+
 @import "funk";
 
+@import "theme/rotate";
 // Load theme overrides
 @import "theme/variables";
 @import "theme/nav";
@@ -64,6 +72,13 @@ $enable-cssgrid: true; // stylelint-disable-line scss/dollar-variable-default
 @import "theme/forms";
 @import "theme/vendor/choicesjs";
 
+
+@import "buttons";
+
+
+@import "theme/pages/event-activities";
+
 // Load docs dependencies
 @import "syntax";
 @import "anchor";
+
