--- a/site/assets/scss/_funk.scss
+++ b/site/assets/scss/_funk.scss
@@ -17,12 +17,11 @@
   }
 }
 
-
 /*
  *  STYLE 1
  */
 
-*::-webkit-scrollbar-track
+ *::-webkit-scrollbar-track
  {
   box-shadow: inset 0 0 16px rgba(0,0,0,.1);
    -webkit-box-shadow: inset 0 0 16px rgba(0,0,0,.1);
@@ -46,6 +45,82 @@
  }
 
 
+@supports not (container-type: inline-size) {
+  .bd-example-snippet {
+  container: inline-size;
+  container-name: test;
+    visibility: hidden;
+  }
+}
+
+  .bd-example {
+  container: inline-size;
+  container-name: responsive-container;
+  /* border: 1px solid red !important; */
+  flex: 1;
+  flex-wrap: wrap;
+  min-width: 375px;
+  max-width:100%;
+  contain: content;
+  }
+
+  @container responsive-container (min-width: 375px) {
+    .bd-example {
+      min-width: 375px;
+      contain: content;
+    }
+  }
+
+
+.bd-example-snippet {
+
+
+  &.expand {
+
+    margin-top:66px !important;
+
+    .tovAx__lesson--nextLessonCard {
+    top: 8px;
+    }
+
+    position: fixed;
+    overflow-y: scroll;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $light !important;
+    margin: 0 0 0 0;
+    z-index:9999;
+
+    .tovAxExampleExpanded {
+      position: fixed;
+      right: 50%;
+      left:auto;
+      top: 40px;
+      z-index:9999;
+    }
+
+  }
+
+
+
+  .tovAx__lesson--nextLessonCard {
+    background-image: url('/docs/5.2/assets/img/placeholder_component.svg');
+    max-width: 100%;
+      width: 100%;
+       height:auto;
+        min-width: 280px;
+         aspect-ratio: 1 / 1;
+          background-position: 50% 50%;
+           background-size: fill;
+           background-attachment: fixed;
+            top: 88px;
+             bottom: 0;
+  }
+}
 /**
  * Ensures anchor links are fixed to the top of the page when JS is enabled,
  * so new page loads referencing an anchor always display the header.
@@ -222,6 +297,37 @@ responsive-container.C4::before {
     display: none!important;
   }
 }
+
+
+
+.dragTovAxSideNavWrapper {
+  /* Base styles that work on any screen size */
+    display: none;
+}
+
+.MD {
+
+  .dragTovAxSideNavWrapper {
+    /* Styles that only apply to medium screens and up */
+    display: block;
+  }
+
+  .dragTovAxSideNav {
+    /* Overrides that apply for medium container sizes */
+    // background-color: rgba(255,255,255,.5);
+    box-sizing: border-box;
+    touch-action: none;
+    width: 220px;
+    min-width:100px;
+    display: flex;
+  }
+
+}
+
+.LG > .MyComponent {
+  /* Overrides that apply for large container sizes */
+}
+
 /**
  * LESSON ACTIVITY: EVENT
  * ------------------------------------------------------------------------ \\
