--- a/site/layouts/_default/docs.html
+++ b/site/layouts/_default/docs.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-  <div class="bd-layout gap-0 p-2 p-lg-4">
-    <aside class="bd-sidebar">
+  <div class="bd-layout position-relative gap-0">
+    <aside class="bd-sidebar px-5">
       <div class="offcanvas-lg offcanvas-start" tabindex="-1" id="bdSidebar" aria-labelledby="bdSidebarOffcanvasLabel">
         <div class="offcanvas-header border-bottom">
           <h5 class="offcanvas-title" id="bdSidebarOffcanvasLabel">Browse docs</h5>
@@ -13,20 +13,23 @@
       </div>
     </aside>
 
-    <main class="bd-main p-2 p-lg-4 order-1">
-      <div class="bd-intro p-0">
-        <div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between">
-          <a class="btn btn-sm btn-bd-light mb-3 mb-md-0 rounded-2" href="{{ .Site.Params.repo }}/blob/v{{ .Site.Params.current_version }}/site/content/{{ .Page.File.Path | replaceRE `\\` "/" }}" title="View and edit this file on GitHub" target="_blank" rel="noopener">
+    <main class="bd-main w-100 ps-4 pe-5 order-1">
+      <div class="bd-intro pt-5">
+        <div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between pe-md-3">
+          <!-- <a class="btn btn-sm btn-bd-light mb-3 mb-md-0 rounded-2" href="{{ .Site.Params.repo }}/blob/v{{ .Site.Params.current_version }}/site/content/{{ .Page.File.Path | replaceRE `\\` "/" }}" title="View and edit this file on GitHub" target="_blank" rel="noopener">
             View on GitHub
+          </a> -->
+          <a class="btn btn-sm btn-bd-light mb-3 mb-md-0 rounded-2 py-2 px-3 lh-4" title=""  rel="noopener">
+            In Review
           </a>
-          <h1 class="bd-title mb-0" id="content">{{ .Title | markdownify }}</h1>
+          <h1 class="bd-title mb-4" id="content">{{ .Title | markdownify }}</h1>
         </div>
         <p class="bd-lead">{{ .Page.Params.Description | markdownify }}</p>
         {{ partial "ads" . }}
       </div>
 
       {{ if (eq .Page.Params.toc true) }}
-        <div class="bd-toc mt-3 mb-5 my-lg-0 ps-xl-3 mb-lg-5 text-muted">
+        <div class="bd-toc ps-5 text-muted">
           <button class="btn btn-link link-dark p-md-0 mb-2 mb-md-0 text-decoration-none bd-toc-toggle d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#tocContents" aria-expanded="false" aria-controls="tocContents">
             On this page
             <svg class="bi d-md-none ms-2" aria-hidden="true"><use xlink:href="#chevron-expand"></use></svg>
