--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -87,7 +87,6 @@ ${htmlSnippet.replace(/^/gm, '    ')}
 <script src="https://kit.fontawesome.com/8c1112f2d0.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-{{/*  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />  */}}
 <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 <script>
   interact('.resizable')
@@ -107,9 +106,42 @@ ${htmlSnippet.replace(/^/gm, '    ')}
         })
 
         Object.assign(event.target.dataset, { x, y })
+
       }
     }
-  })
+  });
+
+  interact('.dragTovAxSideNav')
+  .resizable({
+    edges: { top: false, left: false, bottom: false, right: true },
+
+    listeners: {
+      move: function (event) {
+        let { x, y } = event.target.dataset
+
+        x = (parseFloat(x) || 0) + event.deltaRect.left
+        y = (parseFloat(y) || 0) + event.deltaRect.top
+
+        Object.assign(event.target.style, {
+          width: `${event.rect.width}px`,
+          height: `${event.rect.height}px`,
+          transform: `translate(${x}px, ${y}px)`
+        })
+
+        Object.assign(event.target.dataset, { x, y })
+      },
+
+
+
+  modifiers: [
+
+    interact.modifiers.restrict({
+      restriction: '.dragTovAxSideNavWrapper'
+    }),
+  ],
+
+    }
+  });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/container-query-polyfill@1/dist/container-query-polyfill.modern.js"></script>
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>`
