--- a/site/layouts/shortcodes/example.html
+++ b/site/layouts/shortcodes/example.html
@@ -20,49 +20,10 @@
 {{- $content := .Inner -}}
 
 
-<style>
-.MyComponent {
-  /* Base styles that work on any screen size */
-  contain: content;
-}
-
-.MD > .MyComponent {
-  /* Overrides that apply for medium container sizes */
-}
-
-.LG > .MyComponent {
-  /* Overrides that apply for large container sizes */
-}
-
-@supports not (container-type: inline-size) {
-  .bd-example-snippet {
-  container: inline-size;
-  container-name: test;
-    visibility: hidden;
-  }
-}
-
-  .bd-example {
-  container: inline-size;
-  container-name: responsive-container;
-  /* border: 1px solid red !important; */
-  flex: 1;
-  flex-wrap: wrap;
-  min-width: 375px;
-  max-width:100%;
-  contain: content;
-  }
-
-  @container responsive-container (min-width: 375px) {
-    .bd-example {
-      min-width: 375px;
-      contain: content;
-    }
-  }
-</style>
-<div class="p-3 bd-example-snippet bd-code-snippet">
+<div x-data="{ open: false }" :class="open ? 'expand' : ''" class="p-3 mt-5 align-items-middle bd-example-snippet bd-code-snippet bg-light" style="touch-action: none; box-sizing: border-box;">
+  <div class="tovAxExampleExpanded d-flex justify-content-center p-0 mb-3 rounded-3 mx-n1"><button x-on:click="open = ! open" class="btn btn-sm btn-bd-primary d-flex justify-content-center align-items-center p-0 lh-0" style="width:48px; height: 48px;"><i class="fa-solid fa-expand"></i></button></div>
   {{- if eq $show_preview true -}}
-  <div{{ with $id }} id="{{ . }}"{{ end }} class="responsive-container XS SM MD LG XL tov-test resizable p-3 m-0 h-auto bd-example{{ with $class }} {{ . }}{{ end }}" data-observe-resizes>
+  <div{{ with $id }} id="{{ . }}"{{ end }} class="responsive-container d-flex XS SM MD LG XL tov-test resizable p-3 m-0 h-auto bd-example{{ with $class }} {{ . }}{{ end }}" style="touch-action: none; box-sizing: border-box;" data-observe-resizes>
 
     {{- $input -}}
 </div>
@@ -71,15 +32,7 @@
   {{- if eq $show_markup true -}}
     {{- if eq $show_preview true -}}
       <div class="d-flex align-items-center w-100 highlight-toolbar py-2">
-        <small class="font-monospace text-muted text-uppercase">{{- $lang -}}</small>
-        <div class="d-flex ms-auto gap-1">
-          <button type="button" class="btn-edit text-nowrap"{{ with $stackblitz_add_js }} data-sb-js-snippet="{{ $stackblitz_add_js }}"{{ end }} title="Try it on StackBlitz">
-            <svg class="bi" role="img" aria-label="Try it"><use xlink:href="#lightning-charge-fill"/></svg>
-          </button>
-          <button type="button" class="btn-clipboard mt-0 me-0" title="Copy to clipboard">
-            <svg class="bi" role="img" aria-label="Copy"><use xlink:href="#clipboard"/></svg>
-          </button>
-        </div>
+        <small class="font-monospace text-muted text-uppercase pt-3">{{- $lang -}}</small>
       </div>
 
     {{- end -}}
