--- a/site/assets/scss/_funk.scss
+++ b/site/assets/scss/_funk.scss
@@ -74,14 +74,13 @@
 
 .bd-example-snippet {
 
-  &.tovAxExampleExpanded {
-    background-color: red !important;
-  }
 
   &.expand {
 
+.tovAx__lesson--nextLessonCard-container {
 
-    margin-top:66px !important;
+  top:8px !important;
+}
 
     .tovAx__lesson--nextLessonCard {
     top: 8px;
