--- a/site/assets/scss/_funk.scss
+++ b/site/assets/scss/_funk.scss
@@ -21,76 +21,67 @@
  *  STYLE 1
  */
 
- *::-webkit-scrollbar-track
- {
-  box-shadow: inset 0 0 16px rgba(0,0,0,.1);
-   -webkit-box-shadow: inset 0 0 16px rgba(0,0,0,.1);
-   border-radius: 10px;
-   background-color: rgba(255,255,255,.1);
- }
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
 
-*::-webkit-scrollbar
- {
-   width: 8px;
-   border-radius: 10px;
-   background-color: rgba(0,0,0,0);
- }
+*::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0);
+}
 
-*::-webkit-scrollbar-thumb
- {
-   border-radius: 10px;
-   box-shadow: inset 0 0 16px rgba(0,0,0,.3);
-   -webkit-box-shadow: inset 0 0 16px rgba(0,0,0,.3);
-   background-color: #555;
- }
-
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
 
 @supports not (container-type: inline-size) {
   .bd-example-snippet {
-  container: inline-size;
-  container-name: test;
+    container: inline-size;
+    container-name: test;
     visibility: hidden;
   }
 }
 
-  .bd-example {
+.bd-example {
   container: inline-size;
   container-name: responsive-container;
   /* border: 1px solid red !important; */
   flex: 1;
   flex-wrap: wrap;
   min-width: 375px;
-  max-width:100%;
+  max-width: 100%;
   contain: content;
-  }
-
-  @container responsive-container (min-width: 375px) {
-    .bd-example {
-      min-width: 375px;
-      contain: content;
-    }
-  }
-
-
-.bd-example-snippet {
-
-
-  &.expand {
-
-.tovAx__lesson--nextLessonCard-container {
-
-  top:8px !important;
 }
 
-margin-top:66px !important;
+@container responsive-container (min-width: 375px) {
+  .bd-example {
+    min-width: 375px;
+    contain: content;
+  }
+}
+
+.bd-example-snippet {
+  &.expand {
+    .tovAx__lesson--nextLessonCard-container {
+      top: 8px !important;
+    }
+
+    margin-top: 66px !important;
 
     .tovAx__lesson--nextLessonCard {
-    top: 8px;
+      top: 8px;
     }
 
     position: fixed;
     overflow-y: scroll;
-    top:0;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
@@ -98,35 +89,34 @@ margin-top:66px !important;
     height: 100%;
     background-color: $light !important;
     margin: 0 0 0 0;
-    z-index:9999;
+    z-index: 9999;
 
     .tovAxExampleExpanded {
       background-color: $danger !important;
       position: fixed;
       right: 50%;
-      left:auto;
+      left: auto;
       top: 40px;
-      z-index:9999;
+      z-index: 9999;
     }
-
   }
 
-.tovAx__lesson--nextLessonCard-container {
-  height:auto;
-  top: 88px;
-   bottom: 0;
-   min-width: 280px;
-}
+  .tovAx__lesson--nextLessonCard-container {
+    height: auto;
+    top: 88px;
+    bottom: 0;
+    min-width: 280px;
+  }
 
   .tovAx__lesson--nextLessonCard {
-    background-image: url('/docs/5.2/assets/img/placeholder_component.svg');
+    background-image: url("/docs/5.2/assets/img/placeholder_component.svg");
     max-width: 100%;
-      width: 100%;
-       max-height: 300px;
-         aspect-ratio: 1 / 1;
-          background-position: 50% 50%;
-           background-size: fill;
-           background-attachment: fixed;
+    width: 100%;
+    max-height: 300px;
+    aspect-ratio: 1 / 1;
+    background-position: 50% 50%;
+    background-size: fill;
+    background-attachment: fixed;
   }
 }
 /**
@@ -134,7 +124,7 @@ margin-top:66px !important;
  * so new page loads referencing an anchor always display the header.
  * (this is unset in a <noscript> tag)
  */
- [data-section-anchor] {
+[data-section-anchor] {
   position: fixed;
   top: 0;
 }
@@ -158,7 +148,7 @@ responsive-container::before {
   font-size: 0.8em;
   -webkit-font-smoothing: initial;
   font-weight: 700;
-  padding-top:1em;
+  padding-top: 1em;
   letter-spacing: 0em;
   position: absolute;
   right: -4.3em;
@@ -189,7 +179,7 @@ responsive-container.XS::before {
   background-color: #cea964;
   color: hsla(0, 100%, 100%, 100);
   content: "XS";
-  font-family: 'JetBrains Mono', monospace;
+  font-family: "JetBrains Mono", monospace;
   font-weight: 200;
 }
 
@@ -272,49 +262,46 @@ responsive-container.C4::before {
 
 @media (max-width: 47.97em) {
   .hidden\@MD {
-    display: none!important;
+    display: none !important;
   }
 }
 
 @media (min-width: 48em) {
   .visible\@MD {
-    display: none!important;
+    display: none !important;
   }
 }
 
 @media (max-width: 59.97em) {
   .hidden\@LG {
-    display: none!important;
+    display: none !important;
   }
 }
 
 @media (min-width: 60em) {
   .visible\@LG {
-    display: none!important;
+    display: none !important;
   }
 }
 
 @media (max-width: 71.97em) {
   .hidden\@XL {
-    display: none!important;
+    display: none !important;
   }
 }
 
 @media (min-width: 72em) {
   .visible\@XL {
-    display: none!important;
+    display: none !important;
   }
 }
 
-
-
 .dragTovAxSideNavWrapper {
   /* Base styles that work on any screen size */
-    display: none;
+  display: none;
 }
 
 .MD {
-
   .dragTovAxSideNavWrapper {
     /* Styles that only apply to medium screens and up */
     display: block;
@@ -326,10 +313,9 @@ responsive-container.C4::before {
     box-sizing: border-box;
     touch-action: none;
     width: 220px;
-    min-width:100px;
+    min-width: 100px;
     display: flex;
   }
-
 }
 
 .LG > .MyComponent {
@@ -342,10 +328,44 @@ responsive-container.C4::before {
  */
 .XS .tov-lessonActivity-event {
   .tov-lessonActivity-event_coverImgage {
-    display:none;}
+    display: none;
+  }
 }
 
 .SM .tov-lessonActivity-event {
   .tov-lessonActivity-event_coverImgage {
-    display:flex;}
+    display: flex;
+  }
 }
+
+
+
+form#myAwesomeDropzone.dropzone.dz-clickable {
+	background: #ffffff none repeat scroll 0% 0% / auto padding-box border-box;
+	border: 2px dashed #dee2e6;
+	border-radius: 6px;
+	box-sizing: border-box;
+	color: #6c757d;
+	cursor: pointer;
+	font-size: 14.4px;
+	line-height: 21.6px;
+	min-height: 150px;
+	padding: 20px;
+	word-wrap: break-word;
+}
+
+div.dz-message.needsclick {
+	box-sizing: border-box;
+	color: #6c757d;
+	cursor: pointer;
+	font-size: 14.4px;
+	line-height: 21.6px;
+	margin: 2rem 0px;
+	text-align: center;
+	word-wrap: break-word;
+}
+
+
+
+
+
