--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -88,6 +88,10 @@ ${htmlSnippet.replace(/^/gm, '    ')}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+<!-- plugin js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.min.js"></script>
+<!-- init js -->
+
 <script>
   interact('.resizable')
   .resizable({
