updates after losing a days work

--- a/site/assets/scss/_content.scss
+++ b/site/assets/scss/_content.scss
@@ -3,6 +3,7 @@
 //
 
 .bd-content {
+  box-sizing: border-box;
   // Offset content from fixed navbar when jumping to headings
   > :target {
     padding-top: 5rem;
