--- a/site/layouts/shortcodes/tovuti/global/lessonActivity-event.html
+++ b/site/layouts/shortcodes/tovuti/global/lessonActivity-event.html
@@ -229,65 +229,15 @@
               </div>
               <div class="d-flex flex-column flex-fill gap-3 p-4">
                 <div class="">
-
-
-
-                  <label for="exampleFormControlTextarea1" class="form-label">Select Event Image</label>
-<!-- File Upload -->
-<form action="/" method="post" class="dropzone" id="myAwesomeDropzone" data-plugin="dropzone" data-previews-container="#file-previews"
-    data-upload-preview-template="#uploadPreviewTemplate">
-    <div class="fallback">
-        <input name="file" type="file" multiple />
-    </div>
-
-    <div class="dz-message needsclick">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-photo-up" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-        <path d="M15 8h.01"></path>
-        <path d="M12 20h-5a3 3 0 0 1 -3 -3v-10a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v5"></path>
-        <path d="M4 15l4 -4c.928 -.893 2.072 -.893 3 0l4 4"></path>
-        <path d="M14 14l1 -1c.617 -.593 1.328 -.793 2.009 -.598"></path>
-        <path d="M19 22v-6"></path>
-        <path d="M22 19l-3 -3l-3 3"></path>
-     </svg>
-        <h5 class="fw-normal mt-2 fs-6">Drop files here or click to upload.</h5>
-
-    </div>
-</form>
-
-<!-- Preview -->
-<div class="dropzone-previews mt-3" id="file-previews"></div>
-
-<!-- file preview template -->
-<div class="d-none" id="uploadPreviewTemplate">
-    <div class="card mt-1 mb-0 shadow-none border">
-        <div class="p-2">
-            <div class="row align-items-center">
-                <div class="col-auto">
-                    <img data-dz-thumbnail src="#" class="avatar-sm rounded bg-light" alt="">
-                </div>
-                <div class="col ps-0">
-                    <a href="javascript:void(0);" class="text-muted fw-bold" data-dz-name></a>
-                    <p class="mb-0" data-dz-size></p>
-                </div>
-                <div class="col-auto">
-                    <!-- Button -->
-                    <a href="" class="btn btn-link btn-lg text-muted" data-dz-remove>
-                        <i class="ri-close-line"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+                  <label for="exampleFormControlInput1" class="form-label">Activity Date</label>
+                  <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="My Awesome Event!">
 
                 </div>
                 <div class="">
                   <label for="exampleFormControlTextarea1" class="form-label">Columns</label>
-                  <div class="d-flex flex-row flex-wrap flex-fill justify-content-between gap-2">
+                  <div class="d-flex flex-row flex-wrap justify-content-between gap-2">
                     <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" checked>
-                    <label class="btn btn-light d-flex flex-column w-auto text-start gap-2" for="option1">
+                    <label class="btn flex-fill btn-light d-flex flex-column w-auto text-start gap-2" for="option1">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-layout-sidebar" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <rect x="4" y="4" width="16" height="16" rx="2"></rect>
@@ -296,7 +246,7 @@
                       1/3 Column</label>
 
                     <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
-                    <label class="btn btn-light d-flex flex-column w-auto text-start gap-2" for="option2">
+                    <label class="btn flex-fill btn-light d-flex flex-column w-auto text-start gap-2" for="option2">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-layout-columns" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <rect x="4" y="4" width="16" height="16" rx="2"></rect>
@@ -305,7 +255,7 @@
                       1/2 Column</label>
 
                     <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off">
-                    <label class="btn btn-light d-flex flex-column w-auto flex-fill text-start gap-2" for="option4">
+                    <label class="btn flex-fill btn-light d-flex flex-column w-auto text-start gap-2" for="option4">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-section" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M20 20h.01"></path>
@@ -329,25 +279,25 @@
             </div>
             <div class="d-flex flex-row justify-content-evenly w-100">
               <div class="d-flex p-3">
-                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0">
+                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0 text-center">
                   <input class="form-check-input ms-0" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                   <label class="form-check-label" for="flexSwitchCheckDefault">Required</label>
                 </div>
               </div>
               <div class="d-flex p-3">
-                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0">
+                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0 text-center">
                   <input class="form-check-input ms-0" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                   <label class="form-check-label" for="flexSwitchCheckDefault">Expiration Reporting</label>
                 </div>
               </div>
               <div class="d-flex p-3">
-                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0">
+                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0 text-center">
                   <input class="form-check-input ms-0" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                   <label class="form-check-label" for="flexSwitchCheckDefault">Event Auto Check-in</label>
                 </div>
               </div>
               <div class="d-flex p-3">
-                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0">
+                <div class="form-check form-switch d-flex flex-column justify-content-center align-items-middle ps-0 text-center">
                   <input class="form-check-input ms-0" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                   <label class="form-check-label" for="flexSwitchCheckDefault">Admin Approval Required</label>
                 </div>
