--- a/site/layouts/shortcodes/tovuti/global/lessonActivity-event.html
+++ b/site/layouts/shortcodes/tovuti/global/lessonActivity-event.html
@@ -9,7 +9,7 @@
     </div>
     <div class="d-flex flex-sm-row-reverse flex-lg-row flex-wrap align-items-top gap-4">
       <div class="w-100 p-0 rounded"
-        style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg'); max-width: 240px; min-width: 100%; height:96px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+        style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg'); width: 100%; height:96px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
       </div>
       <div class="col-12 col-md-8 flex-fill position-relative">
         <div class="position-absolute top-0 translate-middle btn-group gap-2 w-auto" role="group"
@@ -25,9 +25,8 @@
         <div class="tov-lessonActivity-event border rounded shadow-sm overflow-hidden">
           <div class="card border-0">
             <div class="row g-0">
-              <div class="tov-lessonActivity-event_coverImgage col-3 border border-0 position-relative">
-                <img src="/docs/5.2/assets/img/placeholder.svg" alt=""
-                  class="border-0 object-fit-cover img-fluid border-0" style="background-position: center center;">
+              <div class="tov-lessonActivity-event_coverImage w-100 border border-0 position-relative">
+EVENT COVER IMAGE
               </div>
               <div class=" col-12 col-lg-9 flex-fill p-0">
                 <div class="card-body p-0">
@@ -122,16 +121,16 @@
                   <div
                     class="vstack bg-success flex-wrap gap-3 p-3 w-100 border-top align-items-bottom justify-content-between h-100">
                     <span
-                      class="text-decoration-none d-flex gap-2 text-light justify-content-center align-items-center "><i
+                      class="text-decoration-none d-flex flex-wrap gap-2 text-light justify-content-center align-items-center "><i
                         class="fa-solid fa-check"></i>You're Registered for this Event!</span>
                     <button type="button"
                       class="btn btn-light text-black text-decoration-none d-flex gap-2 justify-content-center align-items-center"><i
                         class="fa fa-arrow-right"></i>More Details</button>
                   </div>
                   <div
-                    class="calContainer hstack flex-wrap gap-1 px-2 py-3 w-100 border-top justify-content-evenly text-center">
-                    <span class="w-100 mb-2">Add this to your calendar</span>
-                    <div class="hstack flex-wrap w-100 gap-0 gap-md-3 justify-content-center text-center"><a href="#"
+                    class="calContainer hstack flex-wrap gap-1 px-2 py-3 w-100 border-top justify-content-evenly">
+                    <span class="w-100 mb-2 text-center">Add this to your calendar</span>
+                    <div class="hstack flex-wrap w-100 gap-2 justify-content-center text-center"><a href="#"
                         data-type="google"><img src="/docs/5.2/assets/img/tovuti/calendar/calendar_google.svg" alt=""
                           class="w-auto" style="height:32px;" data-type="google"></a>
                       <div class="vr"></div><a href="#" data-type="ics"><img
